include/Tilengine.h

		typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
		typedef unsigned int	uint32_t;	/*!< unsigned 32-bit wide data */
		typedef unsigned char bool;		/*!< C++ bool type for C language */
/*! frame animation definition */
typedef struct
{
	int index;		/*!< tile/sprite index */
	int delay;		/*!< time delay for next frame */
}
TLN_SequenceFrame;
/*! color strip definition */
typedef struct
{
	int delay;		/*!< time delay between frames */
	uint8_t first;	/*!< index of first color to cycle */
	uint8_t count;	/*!< number of colors in the cycle */
	uint8_t dir;	/*!< direction: 0=descending, 1=ascending */
}
TLN_ColorStrip;
/*! sequence info returned by TLN_GetSequenceInfo */
typedef struct
{
	char name[32];	/*!< sequence name */
	int num_frames;	/*!< number of frames */
}
TLN_SequenceInfo;
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Spriteset*	 TLN_Spriteset;			/*!< Opaque sspriteset reference */
typedef struct Sequence*	 TLN_Sequence;			/*!< Opaque sequence reference */
typedef struct SequencePack* TLN_SequencePack;		/*!< Opaque sequence pack reference */
/*! Sprite state */
typedef struct
{
	int x;						/*!< Screen position x */
	int y;						/*!< Screen position y */
	int w;						/*!< Actual width in screen (after scaling) */
	int h;						/*!< Actual height in screen (after scaling) */
	uint32_t flags;				/*!< flags */
	TLN_Palette palette;		/*!< assigned palette */	 
	TLN_Spriteset spriteset;	/*!< assigned spriteset */	
	int index;					/*!< graphic index inside spriteset */
	bool enabled;				/*!< enabled or not */
	bool collision;				/*!< per-pixel collision detection enabled or not */
}
TLN_SpriteState;
//TLNAPI bool TLN_SetSpriteRotation (int nsprite, float angle);
//TLNAPI bool TLN_ResetSpriteRotation (int nsprite);
TLNAPI int  TLN_GetSpritePicture (int nsprite);
TLNAPI int  TLN_GetAvailableSprite (void);
TLNAPI bool TLN_EnableSpriteCollision (int nsprite, bool enable);
TLNAPI bool TLN_GetSpriteCollision (int nsprite);
TLNAPI bool TLN_GetSpriteState(int nsprite, TLN_SpriteState* state);
TLNAPI bool TLN_SetFirstSprite(int nsprite);
TLNAPI bool TLN_SetNextSprite(int nsprite, int next);
TLNAPI bool TLN_EnableSpriteMasking(int nsprite, bool enable);
TLNAPI void TLN_SetSpritesMaskRegion(int top_line, int bottom_line);
TLNAPI bool TLN_SetSpriteAnimation (int nsprite, TLN_Sequence sequence, int loop);
TLNAPI bool TLN_DisableSpriteAnimation(int nsprite);
TLNAPI bool TLN_DisableSprite (int nsprite);
TLNAPI TLN_Palette TLN_GetSpritePalette (int nsprite);
/**@}*/

/**
 * \defgroup sequence
 * \brief Sequence resources management for layer, sprite and palette animations
* @{ */
TLNAPI TLN_Sequence TLN_CreateSequence (const char* name, int target, int num_frames, TLN_SequenceFrame* frames);
TLNAPI TLN_Sequence TLN_CreateCycle (const char* name, int num_strips, TLN_ColorStrip* strips);
TLNAPI TLN_Sequence TLN_CreateSpriteSequence(const char* name, TLN_Spriteset spriteset, const char* basename, int delay);
TLNAPI TLN_Sequence TLN_CloneSequence (TLN_Sequence src);
TLNAPI bool TLN_GetSequenceInfo (TLN_Sequence sequence, TLN_SequenceInfo* info);
TLNAPI bool TLN_DeleteSequence (TLN_Sequence sequence);
/**@}*/

/**
 * \defgroup sequencepack
 * \brief Sequence pack manager for grouping and finding sequences
* @{ */
TLNAPI TLN_SequencePack TLN_CreateSequencePack (void);
TLNAPI TLN_SequencePack TLN_LoadSequencePack (const char* filename);
TLNAPI TLN_Sequence TLN_GetSequence (TLN_SequencePack sp, int index);
TLNAPI TLN_Sequence TLN_FindSequence (TLN_SequencePack sp, const char* name);
TLNAPI int TLN_GetSequencePackCount (TLN_SequencePack sp);
TLNAPI bool TLN_AddSequenceToPack (TLN_SequencePack sp, TLN_Sequence sequence);
TLNAPI bool TLN_DeleteSequencePack (TLN_SequencePack sp);
/**@}*/

/**
 * \defgroup animation
 * \brief Color cycle animation
* @{ */
TLNAPI bool TLN_SetPaletteAnimation (int index, TLN_Palette palette, TLN_Sequence sequence, bool blend);
TLNAPI bool TLN_SetPaletteAnimationSource (int index, TLN_Palette);
TLNAPI bool TLN_GetAnimationState (int index);
TLNAPI bool TLN_SetAnimationDelay (int index, int frame, int delay);
TLNAPI int  TLN_GetAvailableAnimation (void);
TLNAPI bool TLN_DisablePaletteAnimation(int index);
/**@}*/

/**
 * \defgroup world
 * \brief World management
* @{ */
TLNAPI bool TLN_LoadWorld(const char* tmxfile, int first_layer);
TLNAPI void TLN_SetWorldPosition(int x, int y);
TLNAPI bool TLN_SetLayerParallaxFactor(int nlayer, float x, float y);
TLNAPI bool TLN_SetSpriteWorldPosition(int nsprite, int x, int y);
TLNAPI void TLN_ReleaseWorld(void);