include/Tilengine.nim


proc TLN_GetSpritePicture*(nsprite: cint): cint {.importc: "TLN_GetSpritePicture",
    header: "Tilengine.h".}
proc TLN_GetAvailableSprite*(): cint {.importc: "TLN_GetAvailableSprite",
                                    header: "Tilengine.h".}
proc TLN_EnableSpriteCollision*(nsprite: cint; enable: bool): bool {.
    importc: "TLN_EnableSpriteCollision", header: "Tilengine.h".}
proc TLN_GetSpriteCollision*(nsprite: cint): bool {.
    importc: "TLN_GetSpriteCollision", header: "Tilengine.h".}
proc TLN_GetSpriteState*(nsprite: cint; state: ptr TLN_SpriteState): bool {.
    importc: "TLN_GetSpriteState", header: "Tilengine.h".}
proc TLN_SetFirstSprite*(nsprite: cint): bool {.importc: "TLN_SetFirstSprite",
    header: "Tilengine.h".}
proc TLN_SetNextSprite*(nsprite: cint; next: cint): bool {.
    importc: "TLN_SetNextSprite", header: "Tilengine.h".}
proc TLN_EnableSpriteMasking*(nsprite: cint; enable: bool): bool {.
    importc: "TLN_EnableSpriteMasking", header: "Tilengine.h".}
proc TLN_SetSpritesMaskRegion*(top_line: cint; bottom_line: cint) {.
    importc: "TLN_SetSpritesMaskRegion", header: "Tilengine.h".}
proc TLN_SetSpriteAnimation*(nsprite: cint; sequence: TLN_Sequence; loop: cint): bool {.
    importc: "TLN_SetSpriteAnimation", header: "Tilengine.h".}
proc TLN_DisableSpriteAnimation*(nsprite: cint): bool {.
    importc: "TLN_DisableSpriteAnimation", header: "Tilengine.h".}
proc TLN_DisableSprite*(nsprite: cint): bool {.importc: "TLN_DisableSprite",
    header: "Tilengine.h".}
proc TLN_GetSpritePalette*(nsprite: cint): TLN_Palette {.
    importc: "TLN_GetSpritePalette", header: "Tilengine.h".}
## *@}
## *
##  \defgroup sequence
##  \brief Sequence resources management for layer, sprite and palette animations
##  @{

proc TLN_CreateSequence*(name: cstring; target: cint; num_frames: cint;
                        frames: ptr TLN_SequenceFrame): TLN_Sequence {.
    importc: "TLN_CreateSequence", header: "Tilengine.h".}
proc TLN_CreateCycle*(name: cstring; num_strips: cint; strips: ptr TLN_ColorStrip): TLN_Sequence {.
    importc: "TLN_CreateCycle", header: "Tilengine.h".}
proc TLN_CreateSpriteSequence*(name: cstring; spriteset: TLN_Spriteset;
                              basename: cstring; delay: cint): TLN_Sequence {.
    importc: "TLN_CreateSpriteSequence", header: "Tilengine.h".}
proc TLN_CloneSequence*(src: TLN_Sequence): TLN_Sequence {.
    importc: "TLN_CloneSequence", header: "Tilengine.h".}
proc TLN_GetSequenceInfo*(sequence: TLN_Sequence; info: ptr TLN_SequenceInfo): bool {.
    importc: "TLN_GetSequenceInfo", header: "Tilengine.h".}
proc TLN_DeleteSequence*(sequence: TLN_Sequence): bool {.
    importc: "TLN_DeleteSequence", header: "Tilengine.h".}
## *@}
## *
##  \defgroup sequencepack
##  \brief Sequence pack manager for grouping and finding sequences
##  @{

proc TLN_CreateSequencePack*(): TLN_SequencePack {.
    importc: "TLN_CreateSequencePack", header: "Tilengine.h".}
proc TLN_LoadSequencePack*(filename: cstring): TLN_SequencePack {.
    importc: "TLN_LoadSequencePack", header: "Tilengine.h".}
proc TLN_GetSequence*(sp: TLN_SequencePack; index: cint): TLN_Sequence {.
    importc: "TLN_GetSequence", header: "Tilengine.h".}
proc TLN_FindSequence*(sp: TLN_SequencePack; name: cstring): TLN_Sequence {.
    importc: "TLN_FindSequence", header: "Tilengine.h".}
proc TLN_GetSequencePackCount*(sp: TLN_SequencePack): cint {.
    importc: "TLN_GetSequencePackCount", header: "Tilengine.h".}
proc TLN_AddSequenceToPack*(sp: TLN_SequencePack; sequence: TLN_Sequence): bool {.
    importc: "TLN_AddSequenceToPack", header: "Tilengine.h".}
proc TLN_DeleteSequencePack*(sp: TLN_SequencePack): bool {.
    importc: "TLN_DeleteSequencePack", header: "Tilengine.h".}
## *@}
## *
##  \defgroup animation
##  \brief Color cycle animation
##  @{

proc TLN_SetPaletteAnimation*(index: cint; palette: TLN_Palette;
                             sequence: TLN_Sequence; blend: bool): bool {.
    importc: "TLN_SetPaletteAnimation", header: "Tilengine.h".}
proc TLN_SetPaletteAnimationSource*(index: cint; a2: TLN_Palette): bool {.
    importc: "TLN_SetPaletteAnimationSource", header: "Tilengine.h".}
proc TLN_GetAnimationState*(index: cint): bool {.importc: "TLN_GetAnimationState",
    header: "Tilengine.h".}
proc TLN_SetAnimationDelay*(index: cint; frame: cint; delay: cint): bool {.
    importc: "TLN_SetAnimationDelay", header: "Tilengine.h".}
proc TLN_GetAvailableAnimation*(): cint {.importc: "TLN_GetAvailableAnimation",
                                       header: "Tilengine.h".}
proc TLN_DisablePaletteAnimation*(index: cint): bool {.
    importc: "TLN_DisablePaletteAnimation", header: "Tilengine.h".}
## *@}
## *
##  \defgroup world
##  \brief World management
##  @{

proc TLN_LoadWorld*(tmxfile: cstring; first_layer: cint): bool {.
    importc: "TLN_LoadWorld", header: "Tilengine.h".}
proc TLN_SetWorldPosition*(x: cint; y: cint) {.importc: "TLN_SetWorldPosition",
    header: "Tilengine.h".}
proc TLN_SetLayerParallaxFactor*(nlayer: cint; x: cfloat; y: cfloat): bool {.
    importc: "TLN_SetLayerParallaxFactor", header: "Tilengine.h".}
proc TLN_SetSpriteWorldPosition*(nsprite: cint; x: cint; y: cint): bool {.
    importc: "TLN_SetSpriteWorldPosition", header: "Tilengine.h".}
proc TLN_ReleaseWorld*() {.importc: "TLN_ReleaseWorld", header: "Tilengine.h".}
## *@}
